Improve panel layout issue
- remove showBorder attr
- fix border/styles for nested panels

--- a/axelor-front/src/views/form/widgets/panel/panel.module.scss
+++ b/axelor-front/src/views/form/widgets/panel/panel.module.scss
@@ -6,13 +6,33 @@
   --ax-panel-body-padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-.panel .panel {
-  --ax-panel-body-padding: 0;
-  --ax-panel-shadow: none;
-  --ax-panel-bg: transparent;
-}
-
 .title {
   display: flex;
   justify-content: start;
+}
+
+.noFrame {
+  border: 0;
+}
+
+.panel .panel:not(.hasFrame) {
+  border: 0;
+  &.hasHeader {
+    > div:first-child > div,
+    > div:nth-child(2) > div > div {
+      padding: 0;
+      background-color: transparent;
+    }
+    > div:first-child > div > div {
+      padding-left: 0;
+      padding-right: 0;
+      border-bottom: 1px solid var(--bs-border-color);
+    }
+  }
+  &:not(.hasHeader) {
+    > div:first-child > div > div {
+      padding: 0;
+      background-color: transparent;
+    }
+  }
 }
